# BYOM

./: .gitignore  README.md
Analysis/: BYOM_Analysis.m  speed_filter.m
BYOM-CCS/: .cproject  .project  bldc.c  bldc.h  circ_buffer.c  drv8323rs.c  drv8323rs.h  main.c  setup.c  setup.h
BYOM-CCS-skeleton/: README.md  bldc.c  bldc.h  drv8323rs.c  drv8323rs.h  main.c  setup.c  setup.h
BYOM-CCS-skeleton/Debug/: ccsObjs.opt  makefile  subdir_rules.mk  subdir_vars.mk
CAD/: BYOM_hub.SLDPRT  rotor.SLDPRT
tiva_app_FreeRTOS/: CMakeLists.txt  README.md  tm4c123g.cmake
tiva_app_noOS/: CMakeLists.txt  README.md  tm4c123g.ld
tiva_app_noOS/inc/: bldc.h  circ_buffer.h  drv8323rs.h
tiva_app_noOS/src/: bldc.c  drv8323rs.c  main.c  startup.c
